--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-calendars": "^1.217.0",
-    "react-native-loading-spinner-overlay": "^1.0.1"
+    "react-native-gesture-handler": "^1.5.2",
+    "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-tabs": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
